--- a/frontend/src/stylesheet/common.css
+++ b/frontend/src/stylesheet/common.css
@@ -1,16 +1,7 @@
-:root {
-  --primery-text-color: #000000;
-  --primery-bcg-color: #e7eaf2;
-  --secondary-bcg-color: #ffffff;
-  --green-color-accent: #24cca7;
-  --blue-color-accent: #4a56e2;
-  --red-color-accent: #ff6596;
-}
-
 @font-face {
   font-family: 'Poppins';
   src: local('Poppins'), local('Poppins-Regular'),
-    url('./assets/fonts/Poppins-Regular.ttf') format('truetype');
+    url('../assets/fonts/Poppins-Regular.ttf') format('truetype');
   font-weight: 400;
   font-style: normal;
   font-display: swap;
@@ -19,7 +10,7 @@
 @font-face {
   font-family: 'Poppins';
   src: local('Poppins'), local('Poppins-Bold'),
-    url('./assets/fonts/Poppins-Bold.ttf') format('truetype');
+    url('../assets/fonts/Poppins-Bold.ttf') format('truetype');
   font-weight: 700;
   font-style: normal;
   font-display: swap;
@@ -28,7 +19,7 @@
 @font-face {
   font-family: 'Circe';
   src: local('Circe'), local('Circe-Regular'),
-    url('./assets/fonts/Circe-Regular.otf') format('truetype');
+    url('../assets/fonts/Circe-Regular.otf') format('truetype');
   font-weight: 400;
   font-style: normal;
   font-display: swap;
@@ -37,7 +28,7 @@
 @font-face {
   font-family: 'Circe';
   src: local('Circe'), local('Circe-Bold'),
-    url('./assets/fonts/Circe-Bold.otf') format('truetype');
+    url('../assets/fonts/Circe-Bold.otf') format('truetype');
   font-weight: 700;
   font-style: normal;
   font-display: swap;
