--- a/frontend/src/stylesheet/common.css
+++ b/frontend/src/stylesheet/common.css
@@ -1,16 +1,13 @@
 @font-face {
-  font-family: 'Poppins';
-  src: local('Poppins'), local('Poppins-Regular'),
-    url('../assets/fonts/Poppins-Regular.ttf') format('truetype');
+  font-family: 'Segoe UI';
+  src: local('Segoe UI'), url('../assets/fonts/segoeui.ttf') format('truetype');
   font-weight: 400;
   font-style: normal;
   font-display: swap;
 }
-
 @font-face {
-  font-family: 'Poppins';
-  src: local('Poppins'), local('Poppins-Bold'),
-    url('../assets/fonts/Poppins-Bold.ttf') format('truetype');
+  font-family: 'Segoe UI';
+  src: local('Segoe UI'), url('../assets/fonts/segoeuib.ttf') format('truetype');
   font-weight: 700;
   font-style: normal;
   font-display: swap;
