fix modal for transactions, add header

--- a/frontend/src/components/Currency/Currency.module.css
+++ b/frontend/src/components/Currency/Currency.module.css
@@ -8,6 +8,7 @@
       rgba(255, 255, 255, 0) 100%
     ),
     var(--blue-color-accent);
+  animation: bg-animation 25s ease-in-out infinite;
   color: var(--secondary-text-color);
   background-repeat: no-repeat;
   background-position: bottom;
@@ -31,4 +32,31 @@
 .table th,
 .table td {
   padding: 16px 24px;
+}
+
+@keyframes bg-animation {
+  0% {
+    background-size: 120%;
+    background-position: 50% 50%;
+  }
+  20% {
+    background-size: 150%;
+    background-position: 0 50%;
+  }
+  40% {
+    background-size: 110%;
+    background-position: 20% 80%;
+  }
+  60% {
+    background-size: 160%;
+    background-position: 60% 10%;
+  }
+  80% {
+    background-size: 120%;
+    background-position: 40% 70%;
+  }
+  100% {
+    background-size: 120%;
+    background-position: 50% 50%;
+  }
 }
