--- a/frontend/src/components/Modals/AddTransaction/AddTransaction.module.css
+++ b/frontend/src/components/Modals/AddTransaction/AddTransaction.module.css
@@ -24,7 +24,7 @@
   top: -30px;
   right: -50px;
   background-color: var(--secondary-text-color);
-  color: var(--primery-text-color);
+  color: var(--primary-text-color);
   border: none;
   border-radius: 100%;
   outline: none;
