--- a/frontend/src/components/Logo/Logo.module.css
+++ b/frontend/src/components/Logo/Logo.module.css
@@ -2,7 +2,7 @@
   display: flex;
   align-items: center;
   text-decoration: none;
-  color: var(--primery-text-color);
+  color: var(--primary-text-color);
 }
 .title {
   margin: 0;
