--- a/frontend/src/stylesheet/vars.css
+++ b/frontend/src/stylesheet/vars.css
@@ -1,8 +1,8 @@
 :root {
-  --primery-text-color: #000000;
+  --primary-text-color: #000000;
   --secondary-text-color: #ffffff;
   --grey-text-color: #bdbdbd;
-  --primery-bcg-color: #e7eaf2;
+  --primary-bcg-color: #e7eaf2;
   --secondary-bcg-color: #ffffff;
   --green-color-accent: #24cca7;
   --blue-color-accent: #4a56e2;
