--- a/frontend/src/components/Currency/Currency.module.css
+++ b/frontend/src/components/Currency/Currency.module.css
@@ -18,9 +18,6 @@
   height: 174px;
   text-align: center;
 }
-.boxTableLarge {
-  height: 348px;
-}
 .table {
   border-collapse: collapse;
 }
@@ -35,13 +32,20 @@
 .table td {
   padding: 11px 13px;
 }
-.tableMedium th,
-.tableMedium td {
-  padding: 11px 22px;
+@media (min-width: 768px) and (max-width: 1279px) {
+  .table th,
+  .table td {
+    padding: 11px 22px;
+  }
 }
-.tableLarge th,
-.tableLarge td {
-  padding: 16px 24px;
+@media (min-width: 1280px) {
+  .boxTable {
+    height: 348px;
+  }
+  .table th,
+  .table td {
+    padding: 16px 24px;
+  }
 }
 
 @keyframes bg-animation {
