--- a/frontend/src/components/Header/Header.module.css
+++ b/frontend/src/components/Header/Header.module.css
@@ -7,12 +7,6 @@
   justify-content: space-between;
   background-color: var(--secondary-bcg-color);
 }
-.headerMedium {
-  padding: 20px 40px;
-}
-.headerLarge {
-  padding: 20px 85px;
-}
 .exitBox {
   display: flex;
   align-items: center;
@@ -26,4 +20,14 @@
   margin: 0;
   margin-right: 14px;
   padding: 0;
+}
+@media (min-width: 768px) and (max-width: 1279px) {
+  .header {
+    padding: 20px 40px;
+  }
+}
+@media (min-width: 1280px) {
+  .header {
+    padding: 20px 85px;
+  }
 }
