--- a/frontend/src/components/Modals/AddTransaction/AddTransaction.module.css
+++ b/frontend/src/components/Modals/AddTransaction/AddTransaction.module.css
@@ -46,10 +46,7 @@
   margin-top: 20px;
   margin-bottom: 40px;
 }
-.titleMedium {
-  font-size: 30px;
-  margin-top: 0;
-}
+
 .switchBox {
   text-align: center;
   margin-bottom: 40px;
@@ -159,32 +156,43 @@
   width: 25px;
   transform: rotate(0deg);
 }
-.contentForm {
-  padding: 0 10px;
-  margin-bottom: 40px;
-}
+
 .input {
   width: 100%;
 }
-.rowInputs {
-  display: flex;
-  align-items: flex-end;
-  justify-content: space-between;
-}
-.rowInputs .input:first-of-type {
-  margin-right: 30px;
-}
-.rowInputs .input {
-  margin-bottom: 8px;
-}
+
 .comment {
   width: 100%;
-}
-.commentMedium {
-  margin-bottom: 50px;
 }
 .btns {
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+@media (max-width: 767px) {
+  .contentForm {
+    padding: 0 10px;
+    margin-bottom: 40px;
+  }
+}
+
+@media (min-width: 768px) and (max-width: 1279px) {
+  .title {
+    font-size: 30px;
+    margin-top: 0;
+  }
+  .comment {
+    margin-bottom: 50px;
+  }
+  .rowInputs {
+    display: flex;
+    align-items: flex-end;
+    justify-content: space-between;
+  }
+  .rowInputs .input:first-of-type {
+    margin-right: 30px;
+  }
+  .rowInputs .input {
+    margin-bottom: 8px;
+  }
 }
