--- a/frontend/src/components/Modals/LogOut/LogOut.module.css
+++ b/frontend/src/components/Modals/LogOut/LogOut.module.css
@@ -1,12 +1,17 @@
+@import '../../../stylesheet/vars.css';
+
 .exitBtn {
   background-color: #fff;
   border: none;
   outline: none;
+  padding: 0;
   color: var(--grey-text-color);
-  padding: 0 14px;
-  border-left: 1px solid var(--grey-text-color);
   display: flex;
   align-items: center;
+}
+.exitIcon {
+  margin: 0;
+  fill: var(--grey-text-color);
 }
 .exitBtn:hover {
   color: var(--blue-color-accent);
@@ -14,60 +19,58 @@
 .exitBtn:hover .exitIcon {
   fill: var(--blue-color-accent);
 }
-.exitIcon {
-  margin-right: 10px;
-  fill: var(--grey-text-color);
-}
-.exitIconSmall {
-  margin: 0;
-}
-.exitBtnSmall {
-  border: none;
-  padding: 0;
-}
-.modalWindow {
-  position: relative;
-}
 .closeBtn {
   position: absolute;
-  top: -30px;
-  right: -50px;
-  background-color: var(--secondary-text-color);
   color: var(--primary-text-color);
   border: none;
   border-radius: 100%;
   outline: none;
-  padding: 12px;
   display: flex;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-}
-.closeBtn:hover,
-.closeBtn:focus {
-  transform: rotate(180deg);
-}
-.closeBtnSmall {
   top: -20px;
   right: -25px;
   background-color: transparent;
   padding: 8px;
 }
+.closeBtn:hover,
+.closeBtn:focus {
+  transform: rotate(180deg);
+}
 .title {
   font-family: Segoe UI;
   font-weight: 400;
-  font-size: 30px;
+  font-size: 20px;
   line-height: 1.5;
   text-align: center;
   margin: 0;
-  margin-bottom: 40px;
-}
-.titleSmall {
-  font-size: 20px;
-  line-height: 1.5;
   margin-bottom: 20px;
+}
+.modalWindow {
+  position: relative;
 }
 .btns {
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+@media (min-width: 768px) {
+  .closeBtn {
+    top: -30px;
+    right: -50px;
+    background-color: var(--secondary-text-color);
+    padding: 12px;
+  }
+  .title {
+    font-size: 30px;
+    margin-bottom: 40px;
+  }
+  .exitBtn {
+    padding: 0 14px;
+    border-left: 1px solid var(--grey-text-color);
+  }
+  .exitIcon {
+    margin-right: 10px;
+  }
 }
