--- a/frontend/src/components/Chart/Chart.module.css
+++ b/frontend/src/components/Chart/Chart.module.css
@@ -2,3 +2,10 @@
   width: 280px;
   height: 280px;
 }
+
+@media screen and (min-width: 768px) {
+  .chartWrapper {
+    width: 320px;
+    height: 320px;
+  }
+}
