--- a/frontend/src/components/DiagramTab/DiagramTab.module.css
+++ b/frontend/src/components/DiagramTab/DiagramTab.module.css
@@ -1,3 +1,17 @@
+@import '../../stylesheet/vars.css';
+
 .wrapper {
   font-family: 'Circe';
+}
+
+.head {
+  font-family: 'Segoe UI';
+  font-size: 30px;
+  color: var(--primary-text-color);
+}
+
+@media screen and (min-width: 768px) {
+  .wrapper {
+    display: flex;
+  }
 }
