--- a/frontend/src/components/Tab/Tab.module.css
+++ b/frontend/src/components/Tab/Tab.module.css
@@ -1,22 +1,20 @@
 @import '../../stylesheet/vars.css';
 
+/*mobile styles*/
+
 .tabWrapper {
-  width: 100%;
+  width: 280px;
   font-size: 16px;
   color: var(--primary-text-color);
 }
 
-@media screen and (min-width: 768px) {
-  .selectorsWrapper {
-    display: flex;
-  }
-}
+/*table header*/
 
 .tableHeader {
   display: flex;
   align-items: center;
   padding: 15px 30px;
-  width: 280px;
+  width: 100%;
   height: 58px;
   background-color: var(--secondary-bcg-color);
   border-radius: 30px;
@@ -35,12 +33,14 @@
   margin-left: auto;
 }
 
+/*table body*/
+
 .costsList {
   padding: 0;
   margin: 0;
 }
 .costItem {
-  width: 280px;
+  width: 100%;
   height: 54px;
   display: flex;
   align-items: center;
@@ -64,7 +64,8 @@
   margin-left: auto;
 }
 
-/*total*/
+/*/*table total*/
+
 .total {
   margin: 0;
   padding: 15px 20px;
@@ -88,4 +89,17 @@
 }
 .totalDebits {
   color: var(--green-color-accent);
+}
+
+/*tablet and desktop styles */
+
+@media screen and (min-width: 768px) {
+  .selectorsWrapper {
+    display: flex;
+    justify-content: space-between;
+  }
+  .tabWrapper {
+    width: 350px;
+    margin-left: 35px;
+  }
 }
