--- a/frontend/src/pages/DashboardPage.module.css
+++ b/frontend/src/pages/DashboardPage.module.css
@@ -21,6 +21,10 @@
     padding-top: 20px;
     padding-bottom: 20px;
   }
+  .walletPanel {
+    display: flex;
+    justify-content: space-between;
+  }
   .btnAdd {
     bottom: 40px;
     right: 40px;
@@ -31,6 +35,10 @@
   .content {
     padding-top: 40px;
     padding-bottom: 40px;
+    display: flex;
+  }
+  .walletPanel {
+    display: block;
   }
   .btnAdd {
     bottom: 40px;
