--- a/frontend/src/components/LoginForm/LoginForm.module.css
+++ b/frontend/src/components/LoginForm/LoginForm.module.css
@@ -1,39 +1,47 @@
-@import '../../stylesheet//vars.css';
+@import '../../stylesheet/vars.css';
 .container {
   max-width: 320px;
-  width: 100%;
-  height: 568px;
+  height: 100%;
+  background-color: #fff;
+  padding: 110px 20px;
+  margin: 0 auto;
 }
-.formContainer {
-  max-width: 280px;
-  width: 100%;
-  height: 496px;
-  margin: 36px auto;
+.containerMedium {
+  background-color: #fff;
+  padding: 40px 65px 60px 65px;
+  margin: 0 auto;
+  height: 468px;
+  width: 540px;
+  border-radius: 20px;
 }
-.inputWrap {
-  position: relative;
+.logo {
+  width: 28px;
+  height: 22px;
 }
-.error {
-  position: absolute;
-  top: 28%;
-  right: 0%;
+.logoMedium {
+  width: 38px;
+  height: 31px;
 }
 .logoBox {
   display: flex;
   align-items: center;
   justify-content: center;
-  margin-bottom: 50px;
 }
-.icon {
-  position: absolute;
-  top: 10%;
-  left: 5%;
+.form {
+  margin-top: 50px;
+  width: 100%;
 }
-.input {
-  margin: 10 auto;
+.formMedium {
+  margin-top: 50px;
+  width: 410px;
 }
-.buttonContainer {
-  margin-top: 40px;
+.text {
+  font-family: 'Poppins', sans-serif;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 25px;
+  line-height: 1.3;
+  margin: 0 0 0 15px;
 }
 .linkBtn {
   display: block;
@@ -44,7 +52,6 @@
   border: 1px solid #4a56e2;
   border-radius: 20px;
   height: 50px;
-  max-width: 280px;
   width: 100%;
   font-size: 18px;
   line-height: 1.5;
@@ -53,25 +60,24 @@
   text-align: center;
   outline: none;
 }
-.registrBtn {
-  color: '#ffffff';
+.linkBtnHome {
+  display: block;
+  padding-top: 13px;
+  padding-bottom: 13px;
+  content: '';
+  color: #fff;
+  border-radius: 20px;
+  height: 50px;
+  width: 100%;
   font-size: 18px;
   line-height: 1.5;
   text-transform: uppercase;
-  background-color: #24cca7;
-  width: 280px;
-  padding-top: 13px;
-  padding-bottom: 13px;
-  height: 50px;
+  text-decoration: none;
+  text-align: center;
   outline: none;
-  border-radius: 20px;
-  margin-bottom: 20px;
-  border: 1px solid #24cca7;
 }
-.labelWrap {
-  font-family: Circe;
-  font-weight: 400;
-  font-size: 18px;
-  line-height: 1.5;
-  color: #bdbdbd;
+.btnWrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
