--- a/frontend/src/components/RegistrationForm/RegistrationForm.module.css
+++ b/frontend/src/components/RegistrationForm/RegistrationForm.module.css
@@ -1,40 +1,102 @@
-@import '../../stylesheet//vars.css';
+@import '../../stylesheet/vars.css';
 .container {
   max-width: 320px;
-  width: 100%;
-  height: 568px;
+  height: 100%;
+  background-color: #fff;
+  padding: 36px 20px;
+  margin: 0 auto;
 }
-.formContainer {
-  position: relative;
-  max-width: 280px;
-  width: 100%;
-  height: 496px;
-  margin: 36px auto;
+.containerMedium {
+  background-color: #fff;
+  padding: 40px 65px 60px 65px;
+  margin: 0 auto;
+  height: 616px;
+  width: 540px;
+  border-radius: 20px;
 }
-.inputWrap {
-  position: relative;
+.logo {
+  width: 28px;
+  height: 22px;
 }
-.error {
-  position: absolute;
-  top: 32%;
-  right: 0%;
+.logoMedium {
+  width: 38px;
+  height: 31px;
 }
 .logoBox {
   display: flex;
   align-items: center;
   justify-content: center;
-  margin-bottom: 50px;
 }
-.icon {
+.form {
+  margin-top: 50px;
+  width: 100%;
+}
+.formMedium {
+  margin-top: 50px;
+  width: 410px;
+}
+.text {
+  font-family: 'Poppins', sans-serif;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 25px;
+  line-height: 1.3;
+  margin: 0 0 0 15px;
+}
+.wrapProgress {
+  position: relative;
+  margin: 0;
+  padding: 0;
+}
+.progressbar {
   position: absolute;
-  top: 15%;
-  left: 5%;
+  top: 60%;
+  display: flex;
+  align-items: center;
+  width: 100%;
+  border-radius: 25px;
 }
-.input {
-  margin: 10 auto;
+.progressbarMedium {
+  position: absolute;
+  top: 60%;
+  display: flex;
+  align-items: center;
+  width: 410px;
+  border-radius: 25px;
 }
-.buttonContainer {
-  margin-top: 40px;
+.progressbar progress {
+  border-radius: 25px;
+  width: 100%;
+  -webkit-appearance: none;
+  border: none;
+  height: 4px;
+}
+.progressbarMedium progress {
+  border-radius: 25px;
+  width: 100%;
+  -webkit-appearance: none;
+  border: none;
+  height: 4px;
+}
+.progressbar progress::-webkit-progress-bar {
+  border-radius: 25px;
+  background: #e5f1ef;
+  /* box-shadow: 0px 1px 4px rgba(36, 204, 167, 0.5); */
+  height: 4px;
+}
+.progressbarMedium progress::-webkit-progress-bar {
+  border-radius: 25px;
+  background: #e5f1ef;
+  height: 4px;
+}
+progress::-webkit-progress-value {
+  background: -webkit-linear-gradient(left, #24cca7, #24cca7);
+  border-radius: 25px;
+  box-shadow: 0px 1px 4px rgba(36, 204, 167, 0.5);
+}
+.progressbarMedium::-webkit-progress-value {
+  background: -webkit-linear-gradient(left, #24cca7, #24cca7);
+  border-radius: 25px;
 }
 .linkBtn {
   display: block;
@@ -45,7 +107,6 @@
   border: 1px solid #4a56e2;
   border-radius: 20px;
   height: 50px;
-  max-width: 280px;
   width: 100%;
   font-size: 18px;
   line-height: 1.5;
@@ -54,56 +115,8 @@
   text-align: center;
   outline: none;
 }
-.registrBtn {
-  color: '#ffffff';
-  font-size: 18px;
-  line-height: 1.5;
-  text-transform: uppercase;
-  background-color: #24cca7;
-  width: 280px;
-  padding-top: 13px;
-  padding-bottom: 13px;
-  height: 50px;
-  outline: none;
-  border-radius: 20px;
-  margin-bottom: 20px;
-  border: 1px solid #24cca7;
-}
-.labelWrap {
-  font-family: Circe;
-  font-weight: 400;
-  font-size: 18px;
-  line-height: 1.5;
-  color: #bdbdbd;
-}
-.progressbar {
-  position: absolute;
-  top: 64%;
+.btnWrapper {
   display: flex;
+  flex-direction: column;
   align-items: center;
-  /* max-width: 280px; */
-  width: 100%;
 }
-
-.progressbar progress {
-  border-radius: 15px;
-  height: 15px;
-  width: 100%;
-  -webkit-appearance: none;
-  /* position: absolute; */
-  max-width: 280px;
-  border: none;
-  /* border: 4px solid #E5F1EF; */
-}
-.progressbar .progress::-webkit-progress-bar {
-  /* background: #555; */
-  border-radius: 15px;
-}
-.propgress::-webkit-progress-value {
-  background: #170994;
-  border-radius: 25px;
-  height: 5px;
-}
-
-/* border: 4px solid #24CCA7;
-box-shadow: 0px 1px 8px rgba(36, 204, 167, 0.5); */
