--- a/frontend/src/stylesheet/common.css
+++ b/frontend/src/stylesheet/common.css
@@ -1,5 +1,5 @@
 @import './vars.css';
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap');
 
 @font-face {
   font-family: 'Segoe UI';
