--- a/frontend/src/components/HomeTab/HomeTab.module.css
+++ b/frontend/src/components/HomeTab/HomeTab.module.css
@@ -1,3 +1,6 @@
+p {
+  margin: 0;
+}
 .head {
   color: var(--primary-text-color);
   background-color: var(--secondary-bcg-color);
@@ -7,37 +10,76 @@
   font-weight: bold;
   font-size: 18px;
   line-height: 27px;
+  display: grid;
+  grid-auto-flow: column;
+  column-gap: 8.2%;
+  border-radius: 30px;
+  padding: 15px 20px;
+  text-align: start;
 }
-.head th:first-child {
-  border-top-left-radius: 30px;
-  border-bottom-left-radius: 30px;
+
+.head p:nth-child(2) {
+  text-align: center;
 }
-.head th:last-child {
-  border-top-right-radius: 30px;
-  border-bottom-right-radius: 30px;
+
+.head p:nth-child(5),
+.head p:nth-child(6) {
+  text-align: end;
 }
 .row {
-  border-bottom: 1px solid #dcdcdf;
-  box-shadow: 0px 1px 0px rgba(255, 255, 255, 0.6);
-  text-align: center;
+  text-align: start;
+  align-self: center;
   font-family: Circe;
   font-weight: normal;
   font-size: 16px;
   line-height: 24px;
 }
-.row:nth-child(3),
+.rows {
+  border-bottom: 1px solid #dcdcdf;
+  box-shadow: 0px 3px 2px -2px rgba(255, 255, 255, 0.6);
+  display: flex;
+  flex-direction: row;
+  padding: 15px 20px;
+}
+.row:nth-child(2) {
+  text-align: center;
+  width: 1.1%;
+  margin-left: 9.5%;
+  margin-right: 10.5%;
+}
+.row:nth-child(3) {
+  width: 18%;
+  margin-right: 2.5%;
+}
 .row:nth-child(4) {
-  text-align: start;
+  width: 18%;
 }
 
 .row:nth-child(5),
 .row:nth-child(6) {
   text-align: end;
-  padding-right: 15px;
+  width: 9%;
+  margin-left: 5.5%;
+}
+.row:nth-child(6) {
+  margin-left: auto;
+}
+.row:first-child {
+  width: 8.5%;
 }
 .tab {
-  border-collapse: collapse;
-  width: 700px;
+  width: 55vw;
+}
+.scroll {
+  max-height: 70vh;
+  overflow-y: scroll;
+}
+.scroll::-webkit-scrollbar {
+  width: 3px;
+}
+.scroll::-webkit-scrollbar-thumb {
+  border-radius: 3px;
+  background-color: var(--grey-text-color);
 }
 .accentRed {
   font-weight: bold;
@@ -46,4 +88,11 @@
 .accentGreen {
   font-weight: bold;
   color: var(--green-color-accent);
+}
+@media screen and (min-width: 768px) and (max-width: 1279px) {
+  .tab {
+    margin: auto;
+    max-height: 70vh;
+    width: 90vw;
+  }
 }
