--- a/frontend/src/components/HomeTab/HomeTab.module.css
+++ b/frontend/src/components/HomeTab/HomeTab.module.css
@@ -1,6 +1,10 @@
 p {
   margin: 0;
 }
+.empty {
+  font-size: 24px;
+  font-weight: 600;
+}
 .head {
   color: var(--primary-text-color);
   background-color: var(--secondary-bcg-color);
@@ -34,7 +38,7 @@ p {
   font-size: 16px;
   line-height: 24px;
 }
-.rows {
+.transactions {
   border-bottom: 1px solid #dcdcdf;
   box-shadow: 0px 3px 2px -2px rgba(255, 255, 255, 0.6);
   display: flex;
