--- a/frontend/src/pages/HomePage.module.css
+++ b/frontend/src/pages/HomePage.module.css
@@ -1,5 +1,5 @@
 .wrapper {
-  margin-left: auto;
+  margin: 45px auto 0 auto;
 }
 @media screen and (min-width: 768px) and (max-width: 1279px) {
   .wrapper {
