--- a/frontend/src/stylesheet/vars.css
+++ b/frontend/src/stylesheet/vars.css
@@ -8,4 +8,5 @@
   --blue-color-accent: #4a56e2;
   --red-color-accent: #ff6596;
   --light-border-color: #dcdcdf;
+  --light-text-color: #a6a6a6;
 }
