add balance into chart

--- a/frontend/src/components/Chart/Chart.module.css
+++ b/frontend/src/components/Chart/Chart.module.css
@@ -1,6 +1,14 @@
 .chartWrapper {
+  position: relative;
   width: 280px;
   height: 280px;
+}
+.balance {
+  position: absolute;
+  margin: auto;
+  /* top: 50%;
+  right: 50%;
+  transform: translate(-50%, -50%); */
 }
 
 @media screen and (min-width: 768px) {
