--- a/frontend/src/components/Chart/Chart.module.css
+++ b/frontend/src/components/Chart/Chart.module.css
@@ -2,18 +2,20 @@
   position: relative;
   width: 280px;
   height: 280px;
+  margin: 0 auto;
 }
 .balance {
   position: absolute;
-  margin: auto;
-  /* top: 50%;
-  right: 50%;
-  transform: translate(-50%, -50%); */
+  font-weight: 700;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%);
 }
 
 @media screen and (min-width: 768px) {
   .chartWrapper {
     width: 320px;
     height: 320px;
+    margin: 0;
   }
 }
