--- a/frontend/src/components/DiagramTab/DiagramTab.module.css
+++ b/frontend/src/components/DiagramTab/DiagramTab.module.css
@@ -13,5 +13,14 @@
 @media screen and (min-width: 768px) {
   .wrapper {
     display: flex;
+    justify-content: space-between;
+  }
+}
+@media screen and (min-width: 1279px) {
+  .wrapper {
+    margin-left: 30px;
+  }
+  .head {
+    margin-left: 30px;
   }
 }
