--- a/frontend/src/components/LoginForm/LoginForm.module.css
+++ b/frontend/src/components/LoginForm/LoginForm.module.css
@@ -1,82 +1,105 @@
 @import '../../stylesheet/vars.css';
-.container {
-  max-width: 320px;
-  height: 100%;
-  background-color: #fff;
-  padding: 110px 20px;
-  margin: 0 auto;
+@media (max-width: 768px) {
+  .container {
+    max-width: 320px;
+    height: 100%;
+    background-color: #fff;
+    padding: 110px 20px;
+    margin: 0 auto;
+  }
+  .logoBox {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  .logo {
+    width: 28px;
+    height: 22px;
+  }
+  .text {
+    font-family: 'Poppins', sans-serif;
+    font-style: normal;
+    font-weight: 700;
+    font-size: 25px;
+    line-height: 1.3;
+    margin: 0 0 0 15px;
+  }
+  .form {
+    margin-top: 50px;
+    width: 100%;
+  }
+  .btnWrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  .linkBtn {
+    display: block;
+    padding: 13px 68px;
+    content: '';
+    color: #4a56e2;
+    border: 1px solid #4a56e2;
+    border-radius: 20px;
+    height: 50px;
+    width: 280px;
+    font-size: 14px;
+    line-height: 1.5;
+    text-transform: uppercase;
+    text-decoration: none;
+    text-align: center;
+    outline: none;
+  }
 }
-.containerMedium {
-  background-color: #fff;
-  padding: 40px 65px 60px 65px;
-  margin: 0 auto;
-  height: 468px;
-  width: 540px;
-  border-radius: 20px;
-}
-.logo {
-  width: 28px;
-  height: 22px;
-}
-.logoMedium {
-  width: 38px;
-  height: 31px;
-}
-.logoBox {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-.form {
-  margin-top: 50px;
-  width: 100%;
-}
-.formMedium {
-  margin-top: 50px;
-  width: 410px;
-}
-.text {
-  font-family: 'Poppins', sans-serif;
-  font-style: normal;
-  font-weight: 700;
-  font-size: 25px;
-  line-height: 1.3;
-  margin: 0 0 0 15px;
-}
-.linkBtn {
-  display: block;
-  padding: 13px 68px;
-  content: '';
-  color: #4a56e2;
-  border: 1px solid #4a56e2;
-  border-radius: 20px;
-  height: 50px;
-  width: 300px;
-  font-size: 14px;
-  line-height: 1.5;
-  text-transform: uppercase;
-  text-decoration: none;
-  text-align: center;
-  outline: none;
-}
-.linkBtnHome {
-  display: block;
-  padding-top: 13px;
-  padding-bottom: 13px;
-  content: '';
-  color: #fff;
-  border-radius: 20px;
-  height: 50px;
-  width: 100%;
-  font-size: 16px;
-  line-height: 1.5;
-  text-transform: uppercase;
-  text-decoration: none;
-  text-align: center;
-  outline: none;
-}
-.btnWrapper {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+@media (min-width: 768px) {
+  .container {
+    background-color: #fff;
+    padding: 40px 65px 60px 65px;
+    margin: 0 auto;
+    height: 468px;
+    width: 540px;
+    border-radius: 20px;
+  }
+  .logoBox {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  .logo {
+    width: 38px;
+    height: 31px;
+  }
+  .text {
+    font-family: 'Poppins', sans-serif;
+    font-style: normal;
+    font-weight: 700;
+    font-size: 25px;
+    line-height: 1.3;
+    margin: 0 0 0 15px;
+  }
+  .form {
+    margin-top: 50px;
+    width: 410px;
+  }
+  .btnWrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  .linkBtn {
+    display: block;
+    padding: 13px 68px;
+    content: '';
+    color: #4a56e2;
+    border: 1px solid #4a56e2;
+    border-radius: 20px;
+    height: 50px;
+    width: 100%;
+    max-width: 280px;
+    font-size: 14px;
+    line-height: 1.5;
+    text-transform: uppercase;
+    text-decoration: none;
+    text-align: center;
+    outline: none;
+  }
 }
