--- a/frontend/src/components/RegistrationForm/RegistrationForm.module.css
+++ b/frontend/src/components/RegistrationForm/RegistrationForm.module.css
@@ -1,121 +1,185 @@
 @import '../../stylesheet/vars.css';
-.container {
-  max-width: 320px;
-  height: 100%;
-  background-color: #fff;
-  padding: 36px 20px;
-  margin: 0 auto;
+
+@media (max-width: 768px) {
+  .innerContainer {
+    width: 100%;
+    height: 100%;
+    background-color: #fff;
+    padding: 36px 20px;
+    margin: 0 auto;
+  }
+  .logoBox {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  .logo {
+    width: 28px;
+    height: 22px;
+  }
+  .text {
+    font-family: 'Poppins', sans-serif;
+    font-style: normal;
+    font-weight: 700;
+    font-size: 25px;
+    line-height: 1.3;
+    margin: 0 0 0 15px;
+  }
+  .form {
+    margin-top: 50px;
+    width: 100%;
+    text-align: center;
+  }
+  .wrapProgress {
+    position: relative;
+    margin: 0;
+    padding: 0;
+  }
+  .progressbar {
+    position: absolute;
+    top: 60%;
+    display: flex;
+    align-items: center;
+    width: 100%;
+    border-radius: 25px;
+  }
+  .progressbar progress {
+    border-radius: 25px;
+    width: 100%;
+    -webkit-appearance: none;
+    border: none;
+    height: 4px;
+  }
+  .progressbar progress::-webkit-progress-bar {
+    border-radius: 25px;
+    background: #e5f1ef;
+    /* box-shadow: 0px 1px 4px rgba(36, 204, 167, 0.5); */
+    height: 4px;
+  }
+  progress::-webkit-progress-value {
+    background: -webkit-linear-gradient(left, #24cca7, #24cca7);
+    border-radius: 25px;
+    box-shadow: 0px 1px 4px rgba(36, 204, 167, 0.5);
+  }
+  .btnWrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    max-width: 280px;
+    margin: 0 auto;
+  }
+  progress::-webkit-progress-value {
+    background: -webkit-linear-gradient(left, #24cca7, #24cca7);
+    border-radius: 25px;
+    box-shadow: 0px 1px 4px rgba(36, 204, 167, 0.5);
+  }
+  .linkBtn {
+    display: block;
+    padding: 13px 68px;
+    content: '';
+    color: #4a56e2;
+    border: 1px solid #4a56e2;
+    border-radius: 20px;
+    height: 50px;
+    max-width: 280px;
+    font-size: 14px;
+    line-height: 1.5;
+    text-transform: uppercase;
+    text-decoration: none;
+    text-align: center;
+    outline: none;
+    width: 100%;
+  }
 }
-.containerMedium {
-  background-color: #fff;
-  padding: 40px 65px 60px 65px;
-  margin: 0 auto;
-  height: 616px;
-  width: 540px;
-  border-radius: 20px;
-}
-.logo {
-  width: 28px;
-  height: 22px;
-}
-.logoMedium {
-  width: 38px;
-  height: 31px;
-}
-.logoBox {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-.form {
-  margin-top: 50px;
-  width: 100%;
-}
-.formMedium {
-  margin-top: 50px;
-  width: 410px;
-}
-.text {
-  font-family: 'Poppins', sans-serif;
-  font-style: normal;
-  font-weight: 700;
-  font-size: 25px;
-  line-height: 1.3;
-  margin: 0 0 0 15px;
-}
-.wrapProgress {
-  position: relative;
-  margin: 0;
-  padding: 0;
-}
-.progressbar {
-  position: absolute;
-  top: 60%;
-  display: flex;
-  align-items: center;
-  width: 100%;
-  border-radius: 25px;
-}
-.progressbarMedium {
-  position: absolute;
-  top: 60%;
-  display: flex;
-  align-items: center;
-  width: 410px;
-  border-radius: 25px;
-}
-.progressbar progress {
-  border-radius: 25px;
-  width: 100%;
-  -webkit-appearance: none;
-  border: none;
-  height: 4px;
-}
-.progressbarMedium progress {
-  border-radius: 25px;
-  width: 100%;
-  -webkit-appearance: none;
-  border: none;
-  height: 4px;
-}
-.progressbar progress::-webkit-progress-bar {
-  border-radius: 25px;
-  background: #e5f1ef;
-  /* box-shadow: 0px 1px 4px rgba(36, 204, 167, 0.5); */
-  height: 4px;
-}
-.progressbarMedium progress::-webkit-progress-bar {
-  border-radius: 25px;
-  background: #e5f1ef;
-  height: 4px;
-}
-progress::-webkit-progress-value {
-  background: -webkit-linear-gradient(left, #24cca7, #24cca7);
-  border-radius: 25px;
-  box-shadow: 0px 1px 4px rgba(36, 204, 167, 0.5);
-}
-.progressbarMedium::-webkit-progress-value {
-  background: -webkit-linear-gradient(left, #24cca7, #24cca7);
-  border-radius: 25px;
-}
-.linkBtn {
-  display: block;
-  padding: 13px 68px;
-  content: '';
-  color: #4a56e2;
-  border: 1px solid #4a56e2;
-  border-radius: 20px;
-  height: 50px;
-  width: 300px;
-  font-size: 14px;
-  line-height: 1.5;
-  text-transform: uppercase;
-  text-decoration: none;
-  text-align: center;
-  outline: none;
-}
-.btnWrapper {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+@media (min-width: 768px) {
+  .innerContainer {
+    border-radius: 20px;
+    background-color: #fff;
+    padding: 40px 65px 60px 65px;
+    margin: 0 auto;
+    height: 616px;
+    width: 540px;
+  }
+  .logoBox {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  .logo {
+    width: 38px;
+    height: 31px;
+  }
+  .text {
+    font-family: 'Poppins', sans-serif;
+    font-style: normal;
+    font-weight: 700;
+    font-size: 25px;
+    line-height: 1.3;
+    margin: 0 0 0 15px;
+  }
+  .form {
+    text-align: center;
+    margin-top: 50px;
+    width: 410px;
+  }
+  /* .wrap_progress{
+    text-align: center;
+  } */
+  .wrapProgress {
+    position: relative;
+    margin: 0;
+    padding: 0;
+  }
+  .progressbar {
+    position: absolute;
+    top: 60%;
+    display: flex;
+    align-items: center;
+    width: 410px;
+    border-radius: 25px;
+  }
+  .progressbar progress {
+    border-radius: 25px;
+    width: 100%;
+    text-align: center;
+    -webkit-appearance: none;
+    border: none;
+    height: 4px;
+  }
+  .progressbar progress::-webkit-progress-bar {
+    border-radius: 25px;
+    background: #e5f1ef;
+    height: 4px;
+  }
+  .progressbar::-webkit-progress-value {
+    background: -webkit-linear-gradient(left, #24cca7, #24cca7);
+    border-radius: 25px;
+  }
+  .btnWrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    max-width: 280px;
+    margin: 0 auto;
+  }
+  progress::-webkit-progress-value {
+    background: -webkit-linear-gradient(left, #24cca7, #24cca7);
+    border-radius: 25px;
+  }
+  .linkBtn {
+    display: block;
+    padding: 13px 68px;
+    content: '';
+    color: #4a56e2;
+    border: 1px solid #4a56e2;
+    border-radius: 20px;
+    height: 50px;
+    width: 280px;
+    font-size: 14px;
+    line-height: 1.5;
+    text-transform: uppercase;
+    text-decoration: none;
+    text-align: center;
+    outline: none;
+  }
 }
