--- a/src/components/HomeTab/HomeTab.module.css
+++ b/src/components/HomeTab/HomeTab.module.css
@@ -45,6 +45,11 @@ p {
   flex-direction: row;
   padding: 15px 20px;
 }
+
+.row {
+  overflow-wrap: break-word;
+}
+
 .row:nth-child(2) {
   text-align: center;
   width: 1.1%;
@@ -72,7 +77,7 @@ p {
   width: 8.5%;
 }
 .tab {
-  width: 55vw;
+  width: 100%;
 }
 .scroll {
   max-height: 70vh;
@@ -95,8 +100,7 @@ p {
 }
 @media screen and (min-width: 768px) and (max-width: 1279px) {
   .tab {
-    margin: auto;
-    max-height: 70vh;
-    width: 90vw;
+    max-height: 262px;
+    width: 100%;
   }
 }
