--- a/src/pages/HomePage.module.css
+++ b/src/pages/HomePage.module.css
@@ -1,7 +1,7 @@
 .wrapper {
   margin: 45px auto 0 auto;
   height: 60vh;
-  overflow: scroll;
+  /* overflow: scroll; */
 }
 
 @media screen and (min-width: 768px) and (max-width: 1279px) {
