--- a/src/pages/DashboardPage.module.css
+++ b/src/pages/DashboardPage.module.css
@@ -15,8 +15,13 @@
     right: 20px;
   }
 }
-
 @media (min-width: 768px) and (max-width: 1279px) {
+  .bgWrap {
+    background-image: url('../images//bg.png');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
   .content {
     padding-top: 20px;
     padding-bottom: 20px;
@@ -32,6 +37,12 @@
 }
 
 @media (min-width: 1280px) {
+  .bgWrap {
+    background-image: url('../images//bg.png');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
   .content {
     padding: 0;
     display: flex;
