--- a/src/components/RegistrationForm/RegistrationForm.module.css
+++ b/src/components/RegistrationForm/RegistrationForm.module.css
@@ -96,7 +96,7 @@
     border-radius: 20px;
     background-color: #fff;
     padding: 40px 65px 60px 65px;
-    margin: 0 auto;
+    margin: 52px auto;
     height: 616px;
     width: 540px;
   }
