--- a/src/components/LoginForm/LoginForm.module.css
+++ b/src/components/LoginForm/LoginForm.module.css
@@ -1,4 +1,5 @@
 @import '../../stylesheet/vars.css';
+
 @media (max-width: 768px) {
   .container {
     max-width: 320px;
@@ -29,7 +30,7 @@
     width: 100%;
   }
   .btnWrapper {
-    display: flex;
+    /* display: flex; */
     flex-direction: column;
     align-items: center;
   }
@@ -54,7 +55,7 @@
   .container {
     background-color: #fff;
     padding: 40px 65px 60px 65px;
-    margin: 0 auto;
+    margin: 30px auto;
     height: 468px;
     width: 540px;
     border-radius: 20px;
@@ -101,5 +102,10 @@
     text-decoration: none;
     text-align: center;
     outline: none;
+  }
+}
+@media (min-width: 1278px) {
+  .container {
+    margin: 15vw auto;
   }
 }
