--- a/src/pages/DashboardPage.module.css
+++ b/src/pages/DashboardPage.module.css
@@ -1,7 +1,9 @@
 @import '../stylesheet/vars.css';
 
 .btnAdd {
-  position: absolute;
+  position: fixed;
+  bottom: 40px;
+  right: 40px;
   z-index: 1;
 }
 
@@ -16,6 +18,7 @@
     right: 20px;
   }
 }
+
 @media (min-width: 768px) and (max-width: 1279px) {
   .bgWrap {
     background-image: url('../images//bg.png');
@@ -37,6 +40,16 @@
   }
 }
 
+@media screen and (min-width: 768px) {
+  .bgWrap {
+    position: fixed;
+    top: 80px;
+    bottom: 0;
+    left: 0;
+    right: 0;
+  }
+}
+
 @media (min-width: 1280px) {
   .bgWrap {
     background-image: url('../images//bg.png');
@@ -48,7 +61,6 @@
     padding: 0;
     display: flex;
     height: 100%;
-    /* height: 90vh; */
   }
   .walletContainer {
     display: block;
