--- a/src/components/Tab/Tab.module.css
+++ b/src/components/Tab/Tab.module.css
@@ -105,3 +105,9 @@
     margin: 0 0 0 35px;
   }
 }
+@media screen and (min-width: 1278px) {
+  .costsList {
+    max-height: 319px;
+    overflow-y: scroll;
+  }
+}
