--- a/src/components/Currency/Currency.module.css
+++ b/src/components/Currency/Currency.module.css
@@ -18,6 +18,11 @@
   height: 174px;
   text-align: center;
 }
+@media screen and (max-width: 767px) {
+  .boxTable {
+    margin-top: 30px;
+  }
+}
 .table {
   border-collapse: collapse;
 }
