--- a/src/pages/DashboardPage.module.css
+++ b/src/pages/DashboardPage.module.css
@@ -21,7 +21,7 @@
 
 @media (min-width: 768px) and (max-width: 1279px) {
   .bgWrap {
-    background-image: url('../images//bg.png');
+    background-image: url('../images/bg.jpg');
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -52,7 +52,7 @@
 
 @media (min-width: 1280px) {
   .bgWrap {
-    background-image: url('../images//bg.png');
+    background-image: url('../images/bg.jpg');
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
